k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gestion-produits-prod
  labels:
    app.kubernetes.io/part-of: gestion-produits
    environment: prod
